small changes last few weeks

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -63,8 +63,8 @@ binds {
         mpv --start=$start $url
 
     # Run netflix as app
-    bind = CTRL_ALT, N, exec, $PLAYER_SETTINGS \
-        brave --ozone-platform=x11 --app=https://www.netflix.com/browse  # wayland is buggy here, dont know why
+    bind = CTRL_ALT, N, exec, $KITTY_SETTINGS \
+        brave --ozone-platform=wayland --app=https://www.netflix.com/browse
 
     # Zoom toggle
     bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; \
@@ -161,8 +161,8 @@ binds {
     bindl  = , XF86AudioPrev, exec, playerctl previous
 
     # Volume & mic (wpctl / PipeWire)
-    bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 2%+
-    bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 2%-
+    bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 2%+
+    bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 2%-
     bindl  = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
     bindl  = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
