--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -16,10 +16,27 @@ windowrules {
 
     # Programs to workspace
     windowrule = match:class ^(?i)dev.zed.Zed$, workspace 3
+
     windowrule = match:class ^(?i)steam$, workspace 4
+    windowrule = match:class ^(?i)dota2$, workspace 4
     windowrule = match:class ^(?i)teamspeak-client$, workspace 4
     windowrule = match:class ^(?i)Discord|Vesktop$, workspace 4
     windowrule = match:class ^(?i)spotify$, workspace 5
+
+    # Gaming
+    windowrule = match:title ^(?i)Bottles$, workspace 4
+    windowrule = match:title ^(?i)Bottles$, float false
+    windowrule = match:class ^(?i)steam_proton$, workspace 4
+    windowrule = match:class ^(?i)steam_proton$, float false
+
+    # MPV Player
+    windowrule = match:class ^(?i)mpv$, float true
+    windowrule = match:class ^(?i)mpv$, center true
+    windowrule = match:class ^(?i)mpv$, rounding 15
+    windowrule = match:class ^(?i)mpv$, size monitor_w*0.40 monitor_h*0.40
+
+    # Spotify
+    windowrule = match:class ^(?i)spotify$, rounding 15
 
     # Thunar
     windowrule = match:class ^thunar$, float true
