--- a/.config/mangohud/mangohud.conf
+++ b/.config/mangohud/mangohud.conf
@@ -15,10 +15,10 @@
 fps_limit= 160,80,60
 
 ### early = wait before present, late = wait after present
-fps_limit_method=late
+fps_limit_method=wait
 
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-vsync=3
+vsync=1
 
 ### OpenGL VSync [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a FPS limiter (FPS = display refresh rate / N)
 # gl_vsync=-2
@@ -133,15 +133,15 @@ cpu_power
 
 ### Display FPS and frametime
 show_fps_limit
-# fps
+fps
 fps_sampling_period=500
-# fps_color_change
-# fps_value=60,100,144
-# fps_color=B22222,FDFD09,39F900
+fps_color_change
+fps_value=60,100,144
+fps_color=B22222,FDFD09,39F900
 # frametime
 #frame_count
 ## fps_metrics takes a list of decimal values or the value avg
-# fps_metrics=avg,0.01
+fps_metrics=avg,0.01,0.001
 
 ### Display GPU throttling status based on Power, current, temp or "other"
 ## Only shows if throttling is currently happening
@@ -162,8 +162,8 @@ fps_sampling_period=500
 # arch
 
 ### Display the frametime line graph
-frame_timing
-# histogram
+# frame_timing
+histogram
 
 ### Display GameMode / vkBasalt running status
 # gamemode
@@ -336,6 +336,7 @@ toggle_hud=Shift_R+F12
 toggle_fps_limit=Shift_R+F11
 toggle_hud_position=
 toggle_logging=
+reset_fps_metrics=Shift_R+F8
 reload_cfg=
 upload_log=
 
