--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,3 +1,6 @@
+keepaspect=yes
+keepaspect-window=yes
+
 # Youtube Support
 # ytdl-path=/usr/bin/yt-dlp
 script-opts=ytdl_hook-ytdl_path=/usr/bin/yt-dlp
