capture and convert scripts finally implemented

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -5,6 +5,7 @@ binds {
 
     # Reload Hyprland config
     bind = SUPER_SHIFT, R, exec, hyprctl reload
+    bind = CTRL_ALT, R, exec, pkill qs; qs -c noctalia-shell
 
     # Window state toggles
     bind = SUPER, F, togglefloating
@@ -83,6 +84,7 @@ binds {
     bind = , PRINT, exec, hyprshot -m output -m active -z -o $SCREENSHOT_DIR
     bind = SHIFT, PRINT, exec, hyprshot -m window -z -o $SCREENSHOT_DIR
     bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o $SCREENSHOT_DIR
+    bind = CTRL_ALT, S, exec, ~/.config/hypr/scripts/capture.sh
 
     # Get color code (Hyprpicker)
     bind = SUPER_SHIFT, P, exec, hyprpicker -a
