gamemode adapted; custom icons added

--- a/.config/hypr/conf.d/vanity.conf
+++ b/.config/hypr/conf.d/vanity.conf
@@ -1,7 +1,7 @@
 
 animations {
 # hyprlang if HYPR_NOCTALIA
-    enabled = false
+    enabled = true
 # hyprlang endif
 
 # hyprlang if HYPR_CAELESTIA
