--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .config/hypr/conf.d/init/config.conf
 .config/hypr/scheme/current.conf
 
+.config/noctalia/pam
 .config/noctalia/plugins
 .config/noctalia/colors.json
 .config/noctalia/settings.json
