walker added and adapted for current usage

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -67,6 +67,15 @@ binds {
     bind = CTRL_ALT, N, exec, $KITTY_SETTINGS \
         brave --ozone-platform=wayland --app=https://www.netflix.com/browse
 
+    # Streaming
+    bind = SUPER, F9, exec, $PLAYER_SETTINGS printf '%s\n' \
+        'Das Erste | https://daserste-live.ard-mcdn.de/daserste/live/hls/de/master.m3u8' \
+        'ZDF       | https://zdf-hls-15.akamaized.net/hls/live/2016498/de/high/master.m3u8' \
+        'Phoenix   | https://zdf-hls-19.akamaized.net/hls/live/2016502/de/high/master.m3u8' \
+        | walker -d 'Select stream' --minheight 3 \
+        | cut -d'|' -f2- \
+        | xargs -r sh -lc 'mpv "$1"' sh
+
     # Zoom toggle
     bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; \
         hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
