--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -12,6 +12,7 @@
 # Optional: Hyprland-managed helpers (disabled)
 # (noctalia-shell currently manages wallpaper/idling)
 # ------------------------------------------------------------
+exec-once = hyprpm reload
 # exec-once = hyprpaper
 # exec-once = hypridle
 
