--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -12,9 +12,6 @@ binds {
     bind = SUPER, M, fullscreen
     bind = SUPER, P, pin
 
-    # Master layout control / swap
-    bind = SUPER, O, layoutmsg, swapwithmaster master
-
     # Swap workspace to passive monitor
     # - there must be a more elegant way?
     bind = ALT, TAB, exec, \
@@ -105,22 +102,10 @@ binds {
     unbind = , PRINT
     # hyprlang endif
 
-    # ============================================================
-    # FOCUS / RESIZE / MOUSE
-    # ============================================================
 
-    # Focus movement (HJKL)
-    bind = SUPER, H, movefocus, l
-    bind = SUPER, L, movefocus, r
-    bind = SUPER, K, movefocus, u
-    bind = SUPER, J, movefocus, d
-
-    # Resizing with increment
-    $INCREMENT = 50
-    bind = SUPER_SHIFT, l, resizeactive, $INCREMENT 0
-    bind = SUPER_SHIFT, h, resizeactive, -$INCREMENT 0
-    bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
-    bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
+    # ============================================================
+    # LAYOUT
+    # ============================================================
 
     # Resize with mouse
     bindm = SUPER, mouse:272, movewindow
@@ -132,6 +117,47 @@ binds {
     bind = SUPER, mouse_up, exec, hyprctl -q keyword cursor:zoom_factor \
         $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
     bind = SUPER, mouse:274, exec, hyprctl -q keyword cursor:zoom_factor 1
+
+    # Move between windows
+    bind = SUPER, H, movefocus, l
+    bind = SUPER, L, movefocus, r
+    bind = SUPER, K, movefocus, u
+    bind = SUPER, J, movefocus, d
+
+    # Resize windows
+    $INCREMENT = 50
+    bind = SUPER_SHIFT, l, resizeactive, $INCREMENT 0
+    bind = SUPER_SHIFT, h, resizeactive, -$INCREMENT 0
+    bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
+    bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
+
+    # Layout control - Master
+    bind = SUPER, O, layoutmsg, swapwithmaster master
+
+
+    # hyprlang if HYPR_SCROLLING
+        unbind = SUPER, H
+        unbind = SUPER, L
+        unbind = SUPER, K
+        unbind = SUPER, J
+
+        # Move through windows (does not jump workspaces)
+        bind = SUPER, H, layoutmsg, move -col
+        bind = SUPER, L, layoutmsg, move +col
+
+        # Move window in workspace
+        bind = SUPER, comma, layoutmsg, movewindowto l
+        bind = SUPER, period, layoutmsg, movewindowto r
+
+        unbind = SUPER_SHIFT, l
+        unbind = SUPER_SHIFT, h
+        unbind = SUPER_SHIFT, k
+        unbind = SUPER_SHIFT, j
+
+        # Resize windows
+        bind = SUPER_SHIFT, L, layoutmsg, colresize +0.333
+        bind = SUPER_SHIFT, H, layoutmsg, colresize -0.333
+    # hyprlang endif
 
 
     # ============================================================
