adaptation from laptop

--- a/.config/hypr/conf.d/monitors.conf
+++ b/.config/hypr/conf.d/monitors.conf
@@ -9,8 +9,7 @@ monitor=desc:ASUSTek COMPUTER INC ROG XG27UQR R4LMQS097007,highres@highr,auto-le
 
 # hyprlang if HYPR_X13GEN5
 
-monitor=desc:AU Optronics 0x6693,highres@highr,auto-right,1.2
-monitor=desc:AOC 2369M BCOD79A000410,highres@highr,auto-left,1.00
+monitor=desc:AU Optronics 0x6693,highres@highr,auto,1.25
 # monitor=desc:AU Optronics 0x6693,disable
 
 # hyprlang endif
