--- a/.config/hypr/conf.d/workspaces.conf
+++ b/.config/hypr/conf.d/workspaces.conf
@@ -17,3 +17,12 @@ workspace = 5, monitor:DP-3, persistent:true
 
 # hyprlang endif
 
+# hyprlang if HYPR_X13GEN5
+
+workspace = 1, monitor:eDP-1, default=True, persistent:true
+workspace = 2, monitor:eDP-1, persistent:true
+workspace = 3, monitor:eDP-1, persistent:true
+workspace = 4, monitor:eDP-1, persistent:true
+workspace = 5, monitor:eDP-1, persistent:true
+
+# hyprlang endif
