--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -144,10 +144,12 @@ binds {
         # Move through windows (does not jump workspaces)
         bind = SUPER, H, layoutmsg, move -col
         bind = SUPER, L, layoutmsg, move +col
+        bind = SUPER, J, layoutmsg, move +row
+        bind = SUPER, K, layoutmsg, move -row
 
         # Move window in workspace
-        bind = SUPER, comma, layoutmsg, movewindowto l
-        bind = SUPER, period, layoutmsg, movewindowto r
+        bind = SUPER, comma, layoutmsg, swapcol l
+        bind = SUPER, period, layoutmsg, swapcol r
 
         unbind = SUPER_SHIFT, l
         unbind = SUPER_SHIFT, h
