--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -19,6 +19,7 @@ windowrules {
 
     windowrule = match:class ^(?i)steam$, workspace 4
     windowrule = match:class ^(?i)dota2$, workspace 4
+    windowrule = match:class ^(?i)factorio$, workspace 4
     windowrule = match:class ^(?i)teamspeak-client$, workspace 4
     windowrule = match:class ^(?i)Discord|Vesktop$, workspace 4
     windowrule = match:class ^(?i)spotify$, workspace 5
